--- a/basic/db.ipynb
+++ b/basic/db.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "40115e7f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "73de3ada",
    "metadata": {},
    "outputs": [],
@@ -708,16 +708,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "95b34479",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'conn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mconn\u001b[49m.cursor() \u001b[38;5;28;01mas\u001b[39;00m cursor:\n\u001b[32m      2\u001b[39m     sql = \u001b[33m\"\u001b[39m\u001b[33mdelete from users where id=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m     cursor.execute(sql, \u001b[32m5\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'conn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "with conn.cursor() as cursor:\n",
     "    sql = \"delete from users where id=%s\"\n",
     "    cursor.execute(sql, 5)\n",
     "\n",
     "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1f03dbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")"
    ]
   }
  ],
