python crawling + regex

--- a/crawl/crawl2.ipynb
+++ b/crawl/crawl2.ipynb
@@ -13,7 +13,8 @@
     "import csv\n",
     "import pymysql\n",
     "from pymongo import MongoClient\n",
-    "from bson import ObjectId"
+    "from bson import ObjectId\n",
+    "import requests"
    ]
   },
   {
@@ -481,6 +482,14 @@
     "\n",
     "book_collection.insert_many(books_mongo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48310e60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
