python structed + embedding

--- a/openai/05_structed.ipynb
+++ b/openai/05_structed.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "acb44ddb",
    "metadata": {},
    "outputs": [],
@@ -68,10 +68,105 @@
     "            \"content\": \"Alice and Bob are going to a science fair on Friday.\",\n",
     "        },\n",
     "    ],\n",
+    "    # 응답 Format 지정\n",
     "    text_format=CalendarEvent,\n",
     ")\n",
     "\n",
     "event = response.output_parsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f2dbdeca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name='Science Fair' date='Friday' participants=['Alice', 'Bob']\n",
+      "Science Fair\n",
+      "Friday\n",
+      "['Alice', 'Bob']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(event)\n",
+    "print(event.name)\n",
+    "print(event.date)\n",
+    "print(event.participants)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "751e5511",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "steps=[Step(explanation='Start with the original equation: 8x + 7 = -23.', output='8x + 7 = -23'), Step(explanation='Subtract 7 from both sides to isolate the term with x on the left side.', output='8x = -23 - 7'), Step(explanation='Calculate -23 - 7 to simplify the right side.', output='8x = -30'), Step(explanation='Now divide both sides by 8 to solve for x.', output='x = -30 / 8'), Step(explanation='Simplify -30 / 8 to get x in simplest form.', output='x = -15 / 4 or -3.75')] final_answer='x = -3.75'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "client = OpenAI()\n",
+    "\n",
+    "class Step(BaseModel):\n",
+    "    explanation: str\n",
+    "    output: str\n",
+    "\n",
+    "class MathReasoning(BaseModel):\n",
+    "    steps: list[Step]\n",
+    "    final_answer: str\n",
+    "\n",
+    "response = client.responses.parse(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    input=[\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"You are a helpful math tutor. Guide the user through the solution step by step.\",\n",
+    "        },\n",
+    "        {\"role\": \"user\", \"content\": \"how can I solve 8x + 7 = -23\"},\n",
+    "    ],\n",
+    "    text_format=MathReasoning,\n",
+    ")\n",
+    "\n",
+    "math_reasoning = response.output_parsed\n",
+    "\n",
+    "print(math_reasoning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "20f89ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Step(explanation='Start with the original equation: 8x + 7 = -23.', output='8x + 7 = -23'),\n",
+       " Step(explanation='Subtract 7 from both sides to isolate the term with x on the left side.', output='8x = -23 - 7'),\n",
+       " Step(explanation='Calculate -23 - 7 to simplify the right side.', output='8x = -30'),\n",
+       " Step(explanation='Now divide both sides by 8 to solve for x.', output='x = -30 / 8'),\n",
+       " Step(explanation='Simplify -30 / 8 to get x in simplest form.', output='x = -15 / 4 or -3.75')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math_reasoning.steps"
    ]
   }
  ],
