--- a/openai/09_faiss.ipynb
+++ b/openai/09_faiss.ipynb
@@ -14,16 +14,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting faiss-cpu\n",
+      "  Downloading faiss_cpu-1.13.2-cp314-cp314-win_amd64.whl.metadata (7.6 kB)\n",
+      "Requirement already satisfied: numpy<3.0,>=1.25.0 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from faiss-cpu) (2.4.2)\n",
+      "Requirement already satisfied: packaging in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from faiss-cpu) (26.0)\n",
+      "Downloading faiss_cpu-1.13.2-cp314-cp314-win_amd64.whl (18.9 MB)\n",
+      "   ---------------------------------------- 0.0/18.9 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 2.4/18.9 MB 18.4 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 9.2/18.9 MB 27.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 18.9/18.9 MB 34.6 MB/s  0:00:00\n",
+      "Installing collected packages: faiss-cpu\n",
+      "Successfully installed faiss-cpu-1.13.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.3 -> 26.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install faiss-cpu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from dotenv import load_dotenv, find_dotenv\n",
@@ -39,13 +77,219 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>UserId</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>combined</th>\n",
+       "      <th>n_tokens</th>\n",
+       "      <th>embedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B003XPF9BO</td>\n",
+       "      <td>A3R7JR3FMEBXQB</td>\n",
+       "      <td>5</td>\n",
+       "      <td>이런 식으로 어디서 시작하고 멈추는가</td>\n",
+       "      <td>시카고 가족에게 가져 오기 위해 일부를 절약하고 싶었지만 노스 캐롤라이나 가족은 4...</td>\n",
+       "      <td>Title: 이런 식으로 어디서 시작하고 멈추는가; Content: 시카고 가족에게...</td>\n",
+       "      <td>87</td>\n",
+       "      <td>[-0.0022805905900895596, 0.0007801640313118696...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B003JK537S</td>\n",
+       "      <td>A3JBPC3WFUT5ZP</td>\n",
+       "      <td>1</td>\n",
+       "      <td>조각으로 도착했습니다</td>\n",
+       "      <td>상자를 열었을 때 전혀 기뻐하지 않습니다. 대부분의 고리가 조각으로 부러졌습니다.</td>\n",
+       "      <td>Title: 조각으로 도착했습니다; Content: 상자를 열었을 때 전혀 기뻐하지...</td>\n",
+       "      <td>55</td>\n",
+       "      <td>[0.05709123983979225, 0.005073584616184235, -0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ProductId          UserId  Score               Summary  \\\n",
+       "0  B003XPF9BO  A3R7JR3FMEBXQB      5  이런 식으로 어디서 시작하고 멈추는가   \n",
+       "1  B003JK537S  A3JBPC3WFUT5ZP      1           조각으로 도착했습니다   \n",
+       "\n",
+       "                                                Text  \\\n",
+       "0  시카고 가족에게 가져 오기 위해 일부를 절약하고 싶었지만 노스 캐롤라이나 가족은 4...   \n",
+       "1      상자를 열었을 때 전혀 기뻐하지 않습니다. 대부분의 고리가 조각으로 부러졌습니다.   \n",
+       "\n",
+       "                                            combined  n_tokens  \\\n",
+       "0  Title: 이런 식으로 어디서 시작하고 멈추는가; Content: 시카고 가족에게...        87   \n",
+       "1  Title: 조각으로 도착했습니다; Content: 상자를 열었을 때 전혀 기뻐하지...        55   \n",
+       "\n",
+       "                                           embedding  \n",
+       "0  [-0.0022805905900895596, 0.0007801640313118696...  \n",
+       "1  [0.05709123983979225, 0.005073584616184235, -0...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Amazone Restarant Review\n",
+    "\n",
+    "amazone_df = pd.read_csv(\"./data/fine_food_reviews_with_embeddings_1k.csv\", index_col=0)\n",
+    "# delete -0.0022805905900895596 \n",
+    "amazone_df['embedding']= amazone_df.embedding.apply(eval).to_list()\n",
+    "amazone_df.head(2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>UserId</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>combined</th>\n",
+       "      <th>n_tokens</th>\n",
+       "      <th>embedding</th>\n",
+       "      <th>similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>771</th>\n",
+       "      <td>B002GWHBU2</td>\n",
+       "      <td>A2NUQSB42RKBFA</td>\n",
+       "      <td>5</td>\n",
+       "      <td>자메이카 푸른 콩</td>\n",
+       "      <td>로스팅하기위한 우수한 커피 콩 우리 가족은 더 많은 양의 맛을 위해 5 파운드를 더...</td>\n",
+       "      <td>Title: 자메이카 푸른 콩; Content: 로스팅하기위한 우수한 커피 콩 우리...</td>\n",
+       "      <td>112</td>\n",
+       "      <td>[0.0030990454833954573, 0.03926049545407295, -...</td>\n",
+       "      <td>0.520019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>B000E3ZFDU</td>\n",
+       "      <td>A1PQDL14230X6U</td>\n",
+       "      <td>5</td>\n",
+       "      <td>맛있는</td>\n",
+       "      <td>나는이 흰 콩 조미료를 즐긴다 그것은 콩에 풍부한 맛을줍니다. 나는 법에있는 어머니...</td>\n",
+       "      <td>Title: 맛있는; Content: 나는이 흰 콩 조미료를 즐긴다 그것은 콩에 풍...</td>\n",
+       "      <td>181</td>\n",
+       "      <td>[0.04669349640607834, 0.03440799564123154, -0....</td>\n",
+       "      <td>0.519946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>460</th>\n",
+       "      <td>B000RZNY5G</td>\n",
+       "      <td>A2ZGTXBI8C7FYI</td>\n",
+       "      <td>5</td>\n",
+       "      <td>아주 맛있는</td>\n",
+       "      <td>아주 좋은 것은 여전히 ​​약간 왼쪽을 가지고 있습니다. 나는 짠 맛이 마음에 든다.</td>\n",
+       "      <td>Title: 아주 맛있는; Content: 아주 좋은 것은 여전히 ​​약간 왼쪽을 ...</td>\n",
+       "      <td>54</td>\n",
+       "      <td>[-0.009099675342440605, -0.0311743151396513, -...</td>\n",
+       "      <td>0.485047</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ProductId          UserId  Score    Summary  \\\n",
+       "771  B002GWHBU2  A2NUQSB42RKBFA      5  자메이카 푸른 콩   \n",
+       "88   B000E3ZFDU  A1PQDL14230X6U      5        맛있는   \n",
+       "460  B000RZNY5G  A2ZGTXBI8C7FYI      5     아주 맛있는   \n",
+       "\n",
+       "                                                  Text  \\\n",
+       "771  로스팅하기위한 우수한 커피 콩 우리 가족은 더 많은 양의 맛을 위해 5 파운드를 더...   \n",
+       "88   나는이 흰 콩 조미료를 즐긴다 그것은 콩에 풍부한 맛을줍니다. 나는 법에있는 어머니...   \n",
+       "460    아주 좋은 것은 여전히 ​​약간 왼쪽을 가지고 있습니다. 나는 짠 맛이 마음에 든다.   \n",
+       "\n",
+       "                                              combined  n_tokens  \\\n",
+       "771  Title: 자메이카 푸른 콩; Content: 로스팅하기위한 우수한 커피 콩 우리...       112   \n",
+       "88   Title: 맛있는; Content: 나는이 흰 콩 조미료를 즐긴다 그것은 콩에 풍...       181   \n",
+       "460  Title: 아주 맛있는; Content: 아주 좋은 것은 여전히 ​​약간 왼쪽을 ...        54   \n",
+       "\n",
+       "                                             embedding  similarity  \n",
+       "771  [0.0030990454833954573, 0.03926049545407295, -...    0.520019  \n",
+       "88   [0.04669349640607834, 0.03440799564123154, -0....    0.519946  \n",
+       "460  [-0.009099675342440605, -0.0311743151396513, -...    0.485047  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = OpenAI()\n",
     "\n",
     "# ---------- 1) 인덱스 만들기 ----------\n",
     "def build_faiss_from_df_embeddings(df: pd.DataFrame, emb_col=\"embedding\"):\n",
-    "    pass\n",
+    "    vectors = np.vstack(df[emb_col].to_numpy()).astype(\"float32\")\n",
+    "\n",
+    "    # 정규화\n",
+    "    vectors = normalize(vectors)\n",
+    "\n",
+    "    # 차원 가져오기(1000, 1536) : 1536\n",
+    "    d = vectors.shape[1]\n",
+    "    index = faiss.IndexFlatIP(d) # IndexFlatIP 명시적 ID를 저장하지 않음\n",
+    "    index.add(vectors)\n",
+    "\n",
+    "    id_map = df.index.to_numpy()\n",
+    "    return index, id_map\n",
     "\n",
     "# ---------- 2) 검색 ----------\n",
     "def search_faiss_with_existing_embeddings(\n",
@@ -56,10 +300,29 @@
     "    top_k: int = 3,\n",
     "    model: str = \"text-embedding-3-small\"   \n",
     "):\n",
-    "    pass\n",
+    "    # 사용자 입력 embedding 으로 뱐걍 \n",
+    "    embedding = client.embeddings.create(input=query, model = model).data[0].embedding\n",
+    "    q = np.array(embedding, dtype=\"float\").reshape(1,-1)\n",
+    "\n",
+    "    # 질문 정규화\n",
+    "    q = normalize(q)\n",
+    "\n",
+    "    scores, idxs = index.search(q, top_k)\n",
+    "    rows = id_map[idxs[0]]\n",
+    "\n",
+    "    # 실제 리뷰 찾기\n",
+    "    result = df.loc[rows].copy()\n",
+    "    result['similarity'] = scores[0]\n",
+    "\n",
+    "    return result.sort_values(\"similarity\", ascending=False)\n",
     "\n",
     "# ---------------- 사용 예 ----------------\n",
-    "\n"
+    "\n",
+    "index, id_map = build_faiss_from_df_embeddings(amazone_df, emb_col=\"embedding\")\n",
+    "\n",
+    "res = search_faiss_with_existing_embeddings(amazone_df, index,id_map,query=\"맛있는 콩\",top_k=3)\n",
+    "\n",
+    "res"
    ]
   },
   {
@@ -71,26 +334,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1000개의 샘플링 데이터 가져오기\n",
+    "train_sample = pd.read_csv(\"./data/train_sample.csv\")\n",
     "\n",
-    "\n",
-    "# 임베딩 데이터 가져오기\n"
+    "# 임베딩 데이터 가져오기\n",
+    "X_train = np.load(\"./data/X_train.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sim=0.5991978645324707, label=1, doc=이거 재미있게 본영화\n",
+      "sim=0.5803852081298828, label=0, doc=영화가 긴장감도 없고 재미도 없고 영화보면서 욕하기는 처음이네 참 류승범 연기력은 있어도 시나리오 보는 눈은 없는것 같다\n",
+      "sim=0.5687010288238525, label=0, doc=그다지.. 재미도 없고 야하지도 않고.\n",
+      "sim=0.5526138544082642, label=1, doc=아름다운 영화라고 밖에 표현할게 없다.\n",
+      "sim=0.5388971567153931, label=1, doc=또 하나의 재미를 찾을 수 있는 영화다. 다큐의 힘!\n"
+     ]
+    }
+   ],
    "source": [
     "# --- cosine을 위해 L2 정규화 ---\n",
+    "vectors = normalize(X_train)\n",
     "\n",
+    "# 인덱스 만들기\n",
+    "d = vectors.shape[1]\n",
+    "index = faiss.IndexFlatIP(d) # IndexFlatIP 명시적 ID를 저장하지 않음\n",
+    "index.add(vectors)\n",
     "\n",
-    "# 인덱스 만들기\n"
+    "# 사용자 입력 embedding 으로 변경\n",
+    "query = \"영화가 딱히 재미는 없다\"\n",
+    "model = \"text-embedding-3-small\"\n",
+    "embedding = client.embeddings.create(input=query, model = model).data[0].embedding\n",
+    "q = np.array(embedding, dtype=\"float\").reshape(1,-1)\n",
+    "\n",
+    "# 질문 정규화\n",
+    "q = normalize(q)\n",
+    "\n",
+    "scores, idxs = index.search(q, 5)\n",
+    "\n",
+    "rows = idxs[0]\n",
+    "scores = scores[0]\n",
+    "\n",
+    "for idx, no in enumerate(rows):\n",
+    "    doc = train_sample.iloc[no]['document']\n",
+    "    label = train_sample.iloc[no]['label']\n",
+    "    sim = scores[idx]\n",
+    "    print(f\"sim={sim}, label={label}, doc={doc}\")"
    ]
   },
   {
@@ -103,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.14.2)",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
